Update textarea placeholder in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
     <div id="editor-container">
         <h2>JavaScript Code</h2>
-        <textarea id="code-editor" spellcheck="false">((x)=>{y={};for(i of x){y[i]=(y[i]||0)+1}console.log(Object.keys(y).length,y)})(`abc`)</textarea>
+        <textarea id="code-editor" spellcheck="false">Replace this text with your javascript code.. </textarea>
         <button onclick="runCode()">Run Code</button>
     </div>
     <div id="console-container">
